kubernetes/overlays/homelab/romm/generated/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: romm
  namespace: romm

spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - romm.knlim.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /streaming
      backendRefs:
        - name: webstation
          port: 3000
    - backendRefs:
        - name: romm
          port: 8080
